--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,11 @@
 
 /* Your CSS Code here. */
+table, thead, th, tr, td{
+	border: 1px solid black;
+	text-align: center;
+}
+
+.black{
+	background-color: black;
+	color: white;
+}
